--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="{% static "css/index.css" %}" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="\static\img\icon2.ico?id=1">
     <!-- <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script> -->
@@ -41,8 +41,8 @@
 </div>
 
 <body>
-    <nav class="navbar navbar-default navbar-static-top">
-        <div class="container">
+    <nav class="navbar navbar-default navbar-static-top">        
+        <div class="container">            
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
@@ -50,7 +50,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">iTahmSets</a>
+                <a class="navbar-brand" href="/">
+                    <div class="navbar-brand-name">
+                        <img src="\static\img\tahm.png" alt="Tahm Logo" style="float:left;margin:-13px 5px;width:50px;height:50px;"/>
+                        iTahmSets
+                    </div>
+
+                </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
