--- a/static/css/index.css
+++ b/static/css/index.css
@@ -221,8 +221,8 @@ div.bootbox.modal.fade.in + div {
 }
 /* Autocomplete Popup Overriding */
 .ui-menu .ui-menu-item {
-    height:20px !important;
-    font-size:10px !important;
+    height:30px !important;
+    font-size:12px !important;
 }
 
 .form-control {
@@ -234,6 +234,10 @@ div.bootbox.modal.fade.in + div {
   width:150px;
 }
 
+.item-input {
+  width:250px;
+}
+
 .btn-top-bot-margins {
   margin-top: 5px;
   margin-bottom: 10px;
@@ -243,3 +247,13 @@ div.bootbox.modal.fade.in + div {
   margin-right: 3px;
 }
 
+.item-block {
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  padding: 5px 5px 5px 5px;
+  outline: black solid thin;
+}
+
+.ui-autocomplete { z-index:10000 !important;}  
