fixed images on FF, updated about page, item id check

--- a/templates/italiansushi/about.html
+++ b/templates/italiansushi/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/icon2.ico?id=1">
     <title>Italian Sushi</title>
 
 
@@ -49,10 +49,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">iTahmSets</a>
+                <a class="navbar-brand" href="/">
+                    <div class="navbar-brand-name">
+                        <img src="/static/img/tahm.png" alt="Tahm Logo" style="float:left;margin:-13px 5px;width:50px;height:50px;"/>
+                        iTahmSets
+                    </div>
+
+                </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                	<li><a href="">About</a></li>
                     <!-- <li class="active"><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -90,42 +97,14 @@
     	<div class="row">
             <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 bhoechie-tab-container">
                 <div class="inner-about-container">
-                    <h1>
-                        About
-                    </h1>
-                    <p>
-                        some information
-                        <br />some information
-                          <br />some information
-
-                            <br />some information
-                              <br />some information
-
-                                <br />some information
-                                  <br />some information
-
-                                    <br />some information
-                                      <br />some information
-
-                                        <br />some information
-                                          <br />some information
-
-                                            <br />some information
-                                              <br />some information
-
-                                                <br />some information
-                                                  <br />some information
-
-                                                    <br />some information
-                                                      <br />some information
-
-                                                        <br />some information
-                                                          <br />some information
-                                                          
-
-
-
-                    </p>
+                    <h1>About</h1>               
+                        <p>some information</p>
+	                <h3>Data Set</h2>
+	                	<p> some information...10,000 userids, xxx match ids, etc. </p>
+	                <h3>Uploading Item Sets</h2>
+	                	<p> requirements to upload an item set: </p>
+	                <h3>Matchup Item Set Generator</h2>
+	                	<p> must specify at least 'your champion', other fields may be left blank</p>
                     <p>
                     To return back to the main page, click
                     <a href="/">here</a>.
