--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/icon2.ico?id=1">
     <title>iTahmSets</title>
 
 
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="{% static "css/index.css" %}" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="\static\img\icon2.ico?id=1">
+    
     <!-- <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script> -->
@@ -52,7 +52,7 @@
                 </button>
                 <a class="navbar-brand" href="/">
                     <div class="navbar-brand-name">
-                        <img src="\static\img\tahm.png" alt="Tahm Logo" style="float:left;margin:-13px 5px;width:50px;height:50px;"/>
+                        <img src="/static/img/tahm.png" alt="Tahm Logo" style="float:left;margin:-13px 5px;width:50px;height:50px;"/>
                         iTahmSets
                     </div>
 
